# domain-deployment-tool

./: Cargo.toml
.github/workflows/: build.yml  test.yml
client/: Cargo.toml
client/src/: flags.rs  main.rs  rule_loader.rs  state.rs  windows.rs
logging/: Cargo.toml
logging/src/: lib.rs
modules/: Cargo.toml
modules/api/: Cargo.toml
modules/api/src/: lib.rs
modules/firefox/: Cargo.toml
modules/firefox/src/: lib.rs  policies.rs
modules/printer/: Cargo.toml
modules/printer/src/: lib.rs
modules/software/: Cargo.toml
modules/software/src/: lib.rs  windows.rs
modules/src/: lib.rs
modules/wireguard/: Cargo.toml
modules/wireguard/src/: lib.rs
server/: Cargo.toml
server/src/: flags.rs  main.rs  rules.rs
