[package]
name = "wdt-client"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
windows-service = "0.3"
wdt-modules = { path = "../modules" }
anyhow = "1"
surf = "2.1"
async-std = { version = "1.6.0", features = ["attributes"] }
wdt-logging = { path = "../logging" }
serde_json = "1"
serde = "1"
