[package]
name = "wdt-server"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.15"
async-std = { version = "1.6.0", features = ["attributes"] }
structopt = "0.3"
anyhow = "1"
log = "0.4"
serde_yaml = "0.8"
wdt-modules = { path = "../modules" }
wdt-logging = { path = "../logging" }
